--- a/NumberSystemCalculator/UnitTestCalculator/UnitTestCalculator.csproj
+++ b/NumberSystemCalculator/UnitTestCalculator/UnitTestCalculator.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NumberSystemCalculator\NumberSystemCalculator.csproj" />
+    <ProjectReference Include="..\NumberSystemCalculator\DEV-1.2.csproj" />
   </ItemGroup>
 
 </Project>
